--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-use-clock": "^0.0.4"
   },
   "devDependencies": {
